--- a/Algorithms_DataS.vcxproj.filters
+++ b/Algorithms_DataS.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="sortingAlgorithms\sortAlgorithms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="randomAlgorithms\DigPow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="algorithms\primeNums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="randomAlgorithms\DigPow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
