--- a/Algorithms_DataS.vcxproj.filters
+++ b/Algorithms_DataS.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="randomAlgorithms\DigPow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InsertionSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="randomAlgorithms\VowelIndex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -129,6 +135,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="randomAlgorithms\DigPow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InsertionSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="randomAlgorithms\VowelIndex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
